--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>etch a sketch</title>
   </head>
   <body>
+    <button>Change grid size</button>
     <div id="grid-container"></div>
   </body>
 </html>
