--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <title>etch a sketch</title>
   </head>
   <body>
-    <button>Change grid size</button>
+    <div class="buttons">
+      <button id="change-grid">Change grid size</button>
+      <button id="color-black">black</button>
+      <button id="color-red">red</button>
+      <button id="color-blue">blue</button>
+      <button id="color-green">green</button>
+      <button id="color-rainbow">rainbow</button>
+    </div>
     <div id="grid-container"></div>
   </body>
 </html>
