--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>etch a sketch</title>
   </head>
   <body>
+    <div id="heading">
+      <h3>Etch-a-sketch</h3>
+    </div>
     <div class="buttons">
       <button id="change-grid">Change grid size</button>
       <button id="color-black">black</button>
