--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
       <h3>Etch-a-sketch</h3>
     </div>
     <div class="buttons">
+      <button id="reset">RESET</button>
       <button id="change-grid">Change grid size</button>
-      <button id="color-black">black</button>
-      <button id="color-red">red</button>
-      <button id="color-blue">blue</button>
-      <button id="color-green">green</button>
-      <button id="color-rainbow">rainbow</button>
+      <button id="color-black">Black</button>
+      <button id="color-red">Red</button>
+      <button id="color-blue">Blue</button>
+      <button id="color-green">Green</button>
+      <button id="color-rainbow">Rainbow</button>
     </div>
     <div id="grid-container"></div>
   </body>
