--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <div id="heading">
       <h3>Etch-a-sketch</h3>
     </div>
-    <div class="buttons">
-      <button id="reset">RESET</button>
-      <button id="change-grid">Change grid size</button>
+    <div class="color-buttons">
       <button id="color-black">Black</button>
       <button id="color-red">Red</button>
       <button id="color-blue">Blue</button>
@@ -21,5 +19,9 @@
       <button id="color-rainbow">Rainbow</button>
     </div>
     <div id="grid-container"></div>
+    <div class="format-buttons">
+      <button id="change-grid">Change grid size</button>
+      <button id="reset">RESET</button>
+    </div>
   </body>
 </html>
