rewrite gridSquares coloring code; increase grid size; add eraser; add grid lines; refactor;

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <button id="color-blue">Blue</button>
       <button id="color-green">Green</button>
       <button id="color-rainbow">Rainbow</button>
+      <button id="eraser">ERASER</button>
     </div>
     <div id="grid-container"></div>
     <div class="format-buttons">
